update index.j2 file

--- a/deploy_webservers/ansible/files/index.html.j2
+++ b/deploy_webservers/ansible/files/index.html.j2
@@ -3,6 +3,6 @@
        <title>{{ http_host }}</title>
    </head>
    <body>
-       <h1>Hello World from {{ http_host }}</h1>
+       <h1>Hello Stone from {{ http_host }}</h1>
    </body>
 </html>
